+refactor MainActivity, +add some new stuff to weather

--- a/app/src/main/res/layout/activity_main_landscape_phone.xml
+++ b/app/src/main/res/layout/activity_main_landscape_phone.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
+    tools:context="com.example.astroweather.MainActivity"
     tools:layout_editor_absoluteY="25dp">
 
     <LinearLayout
@@ -86,19 +86,17 @@
             android:layout_weight="0.1"
             android:orientation="horizontal">
 
-            <fragment
-                android:id="@+id/list"
-                android:name="com.example.astro.SunFragment"
+            <android.support.v4.view.ViewPager
+                android:id="@+id/viewPagerPhoneLandscape"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="1" />
+                android:layout_weight="1"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
 
-            <fragment
-                android:id="@+id/viewer"
-                android:name="com.example.astro.MoonFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
+            </android.support.v4.view.ViewPager>
+
         </LinearLayout>
     </LinearLayout>
 
