--- a/app/src/main/res/menu/activity_menu.xml
+++ b/app/src/main/res/menu/activity_menu.xml
@@ -2,8 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context=".MainActivity">
+    tools:context="com.example.astroweather.MainActivity">
 
+    <item
+        android:id="@+id/refresh"
+        android:icon="@android:drawable/stat_notify_sync"
+        android:title="@string/refresh_name"
+        app:showAsAction="always" />
+    <item
+        android:id="@+id/city"
+        android:title="@string/city_name"
+        app:showAsAction="never"/>
 
     <item
         android:id="@+id/settings"
