+refactor some code

--- a/app/src/main/res/layout/fragment_basic_and_additional_data.xml
+++ b/app/src/main/res/layout/fragment_basic_and_additional_data.xml
@@ -1,11 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.astroweather.MainActivity"
-    tools:layout_editor_absoluteY="25dp">
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -33,15 +29,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
 
-            <fragment
-                android:id="@+id/third"
-                android:name="com.example.astroweather.weather.ForecastFragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1" />
         </LinearLayout>
 
     </LinearLayout>
-
-
 </android.support.constraint.ConstraintLayout>
