--- a/app/src/main/res/layout/fragment_sun.xml
+++ b/app/src/main/res/layout/fragment_sun.xml
@@ -99,7 +99,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.1"
             android:orientation="vertical">
 
             <TextView
@@ -109,9 +109,9 @@
                 android:layout_weight="1"
                 android:text="      Zmierzch słońca"
                 android:textAlignment="textStart"
+                android:textColor="@android:color/white"
                 android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/twilightTimeText"
@@ -119,17 +119,17 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="TextView"
-                android:textStyle="bold"
-                android:textSize="18sp"
                 android:textAlignment="center"
-                android:textColor="@android:color/white"/>
+                android:textColor="@android:color/white"
+                android:textSize="18sp"
+                android:textStyle="bold" />
 
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="1.1"
             android:orientation="vertical">
 
             <TextView
@@ -139,9 +139,9 @@
                 android:layout_weight="1"
                 android:text="      Świt cywilny słońca"
                 android:textAlignment="textStart"
+                android:textColor="@android:color/white"
                 android:textSize="25sp"
-                android:textStyle="bold"
-                android:textColor="@android:color/white"/>
+                android:textStyle="bold" />
 
             <TextView
                 android:id="@+id/dawnTimeText"
@@ -150,9 +150,9 @@
                 android:layout_weight="1"
                 android:text="TextView"
                 android:textAlignment="center"
-                android:textStyle="bold"
+                android:textColor="@android:color/white"
                 android:textSize="18sp"
-                android:textColor="@android:color/white"/>
+                android:textStyle="bold" />
 
         </LinearLayout>
 
