+deleting cities from database

--- a/app/src/main/res/layout/list_view_row.xml
+++ b/app/src/main/res/layout/list_view_row.xml
@@ -4,4 +4,5 @@
     android:layout_height="match_parent"
     android:gravity="center"
     android:textAlignment="center"
-    android:textSize="36sp" />
+    android:textSize="36sp"
+    android:longClickable="true"/>
