--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -5,175 +5,181 @@
     android:layout_height="match_parent"
     tools:context="com.example.astroweather.MainActivity">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView7"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_weight="0.68"
-                android:gravity="center"
-                android:paddingRight="10dp"
-                android:text="@string/temperature_unit_text"
-                android:textSize="18sp" />
+                android:orientation="vertical">
 
-            <Spinner
-                android:id="@+id/spinnerTemperatureUnit"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="50dp"
-                android:layout_weight="0.9"
-                android:gravity="center" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.3"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/textView7"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.68"
+                        android:gravity="center"
+                        android:paddingRight="10dp"
+                        android:text="@string/temperature_unit_text"
+                        android:textSize="18sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:gravity="center"
-            android:orientation="horizontal">
+                    <Spinner
+                        android:id="@+id/spinnerTemperatureUnit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="50dp"
+                        android:layout_weight="0.9"
+                        android:gravity="center" />
 
-            <TextView
-                android:id="@+id/textVie7"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.68"
-                android:gravity="center"
-                android:paddingRight="10dp"
-                android:text="@string/speed_unit_text"
-                android:textSize="18sp" />
+                </LinearLayout>
 
-            <Spinner
-                android:id="@+id/spinnerSpeedUnit"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginRight="50dp"
-                android:layout_weight="0.9"
-                android:gravity="center" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.3"
+                    android:gravity="center"
+                    android:orientation="horizontal">
 
-        </LinearLayout>
+                    <TextView
+                        android:id="@+id/textVie7"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_weight="0.68"
+                        android:gravity="center"
+                        android:paddingRight="10dp"
+                        android:text="@string/speed_unit_text"
+                        android:textSize="18sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:orientation="vertical">
+                    <Spinner
+                        android:id="@+id/spinnerSpeedUnit"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginRight="50dp"
+                        android:layout_weight="0.9"
+                        android:gravity="center" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:gravity="center_vertical"
-                android:text="@string/latitude_name"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                </LinearLayout>
 
-            <EditText
-                android:id="@+id/latitudeValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:ems="10"
-                android:inputType="phone"
-                android:textAlignment="center" />
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.25"
-            android:gravity="center_vertical|center_horizontal|center"
-            android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/textView3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:gravity="center_vertical"
+                        android:text="@string/latitude_name"
+                        android:textAlignment="center"
+                        android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:gravity="fill_vertical"
-                android:text="@string/longitude_name"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                    <EditText
+                        android:id="@+id/latitudeValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:ems="10"
+                        android:inputType="phone"
+                        android:textAlignment="center" />
+                </LinearLayout>
 
-            <EditText
-                android:id="@+id/longitudeValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:ems="10"
-                android:inputType="phone"
-                android:textAlignment="center" />
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:gravity="center_vertical|center_horizontal|center"
+                    android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.25"
-            android:gravity="center"
-            android:orientation="vertical">
+                    <TextView
+                        android:id="@+id/textView2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:gravity="fill_vertical"
+                        android:text="@string/longitude_name"
+                        android:textAlignment="center"
+                        android:textSize="24sp" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:gravity="center_vertical"
-                android:text="@string/refresh_name"
-                android:textAlignment="center"
-                android:textSize="24sp" />
+                    <EditText
+                        android:id="@+id/longitudeValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:ems="10"
+                        android:inputType="phone"
+                        android:textAlignment="center" />
+                </LinearLayout>
 
-            <EditText
-                android:id="@+id/refreshValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:ems="10"
-                android:digits="0123456789"
-                android:inputType="numberDecimal"
-                android:textAlignment="center" />
-        </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.25"
+                    android:gravity="center"
+                    android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="0.3"
-            android:gravity="center_vertical"
-            android:orientation="horizontal">
+                    <TextView
+                        android:id="@+id/textView4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:gravity="center_vertical"
+                        android:text="@string/refresh_name"
+                        android:textAlignment="center"
+                        android:textSize="24sp" />
 
-            <Button
-                android:id="@+id/saveButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/save_button" />
+                    <EditText
+                        android:id="@+id/refreshValue"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.2"
+                        android:digits="0123456789"
+                        android:ems="10"
+                        android:inputType="numberDecimal"
+                        android:textAlignment="center" />
+                </LinearLayout>
 
-            <Button
-                android:id="@+id/loadButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/load_button" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="0.3"
+                    android:gravity="center_vertical"
+                    android:orientation="horizontal">
 
-            <Button
-                android:id="@+id/defaultButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/default_button" />
+                    <Button
+                        android:id="@+id/saveButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/save_button" />
 
-        </LinearLayout>
-    </LinearLayout>
+                    <Button
+                        android:id="@+id/loadButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/load_button" />
+
+                    <Button
+                        android:id="@+id/defaultButton"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="@string/default_button" />
+
+                </LinearLayout>
+            </LinearLayout>
+    </ScrollView>
+
 </android.support.constraint.ConstraintLayout>
